AQUI TA AUTENTICAÇÃO

--- a/adm/autenticaIncs.html
+++ b/adm/autenticaIncs.html
@@ -1,55 +1,74 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Instascan com Resolução Personalizada (Debug)</title>
-    <script type="text/javascript" src="js/instascan.min.js"></script>
-</head>
-<body>
-    <video id="preview" style="width: 320px; height: 240px;"></video>
-    <script type="text/javascript">
-      let scanner;
-
-      function startScanner(stream) {
-        let videoElement = document.createElement('video');
-        videoElement.srcObject = stream;
-        videoElement.autoplay = true;
-        videoElement.style.display = 'none'; // Oculta o vídeo
-        document.body.appendChild(videoElement);
-
-        videoElement.addEventListener('loadedmetadata', function() {
-          console.log("Metadata do vídeo carregada."); // Adiciona este log
-          videoElement.play().then(() => { // Garante que o play() seja resolvido
-            console.log("Vídeo está tocando."); // Adiciona este log
-            setTimeout(function() {
-              scanner = new Instascan.Scanner({ video: videoElement });
-              scanner.addListener('scan', function (content) {
-                console.log(content);
-              });
-
-              scanner.start(videoElement).then(() => {
-                console.log("Scanner iniciado com stream personalizado.");
-              }).catch(function (err) {
-                console.error("Erro ao iniciar o scanner com stream personalizado:", err);
-              });
-            }, 100); // Atraso de 100ms
-          }).catch(err => {
-            console.error("Erro ao iniciar o vídeo:", err);
-          });
-        });
-      }
-
-      navigator.mediaDevices.getUserMedia({
-        video: {
-          width: { ideal: 640 },
-          height: { ideal: 480 }
+    <title>Autenticando Inscrição</title>
+    <!-- Meta viewport para responsividade -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Inclua os links para os estilos do Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Inclua os links para o SweetAlert2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
+    <!-- Estilos personalizados -->
+    <style>
+        body {
+            padding: 20px;
         }
-      })
-      .then(function(stream) {
-        startScanner(stream);
-      })
-      .catch(function(err) {
-        console.error("Erro ao obter stream de vídeo:", err);
-      });
-    </script>
+
+        .container {
+            max-width: 600px;
+            /* Ajuste o tamanho máximo conforme necessário */
+            margin: auto;
+        }
+
+        .btn {
+            margin-bottom: 10px;
+            /* Espaçamento entre os botões */
+        }
+
+        #cpfExibido {
+            font-size: 1.2em;
+            /* Tamanho do texto do CPF */
+            font-weight: bold;
+        }
+
+        /* Estilos para o vídeo */
+        #cameraPreview {
+            width: 100%;
+            max-height: 300px;
+            /* Ajuste a altura máxima conforme necessário */
+            object-fit: cover;
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+      <h1 class="mb-4">Autenticação de Inscrição</h1>
+      <div class="col"> 
+        <p>CPF a ser autenticado: <span id="cpfExibido"></span></p>
+        <div class="col-6">
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-sm">CPF</span>
+            <input type="text" id="inputCPF" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+          </div>
+        </div>
+        <button id="autenticarButton" class="btn btn-primary btn-lg btn-block">Autenticar com CPF da URL</button>
+        <button id="abrirCamera" class="btn btn-secondary btn-lg btn-block">Escanear QR Code</button>
+        <!-- Elemento de vídeo para exibir a câmera -->
+        <video id="cameraPreview" autoplay playsinline muted></video>
+      </div>
+    </div>
+
+    <!-- Inclua os scripts do Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Inclua os scripts do SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+    <!-- Inclua o script do ZXing -->
+    <script src="https://unpkg.com/@zxing/library@latest/umd/index.min.js"></script>
+    <!-- Inclua o seu script principal -->
+    <script type="module" src="js/authInsc.js"></script>
 </body>
+
 </html>
